--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h1>Eat-da-burger!</h1>
     <form class="create-form">
       <div class="form-group">
-        <label for="ca">Cat Name:</label>
+        <label for="ca">Enter a burger you want to eat and click the "submit" button:</label>
         <button type="submit">Add Cat</button>
         <input type="text" id="ca" name="name" />
       </div>
